# nativeframe-ui

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  RELEASE_NOTES_v1.0.0.md  build.bat  cleanup.bat  loopctl-off.bat  loopctl-on.bat  package-lock.json  package.json
.claude/: cp17_review.js  cp18_review.js  loop-state.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: NativeFrameUICompilerOptions.cmake  NativeFrameUIQualityChecks.cmake  NativeFrameUIResources.cmake  nfui_button.cmake  nfui_charts.cmake  nfui_charts_aa.cmake  nfui_checkbox.cmake  nfui_command.cmake  nfui_control_base.cmake  nfui_controls.cmake  nfui_core.cmake  nfui_dialog.cmake  nfui_frame.cmake  nfui_iconview.cmake  nfui_layout.cmake  nfui_listbox.cmake  nfui_listview.cmake  nfui_menu.cmake  nfui_radio.cmake  nfui_slider.cmake  nfui_text.cmake  nfui_theme.cmake  nfui_treeview.cmake  nfui_window.cmake
docs/: ARCHITECTURE.md  CHARTS.md  CONTRIBUTING.md  DARK_STUDIO_WALKTHROUGH.md  DEMO_MATRIX.md  FEASIBILITY.md  GOVERNANCE.md  INTEGRATION.md  KNOWN_LIMITATIONS.md  PRODUCT_GROWTH_ROADMAP.md  PROJECT_PLAN.md  RELEASE_CHECKLIST.md  RESOURCE_GALLERY_WALKTHROUGH.md  RESOURCE_GUIDE.md  ROADMAP.md  SECURITY.md  SETTINGS_DEMO_WALKTHROUGH.md  SHOWCASE_GUIDE.md  SUPPORT.md  THEME_GUIDE.md  VALIDATION_MATRIX.md  WORKBENCH_WALKTHROUGH.md
docs/KNOWLEDGE/: README.md
docs/KNOWLEDGE/benchmarks/: 2026-07-22-control-creation-cost.md
docs/KNOWLEDGE/competitive/: 2026-07-22-vs-bcgcontrolbar-pro.md  2026-07-22-vs-dear-imgui.md  2026-07-22-vs-mfc.md  2026-07-22-vs-qt.md  2026-07-22-vs-sciter-ultralight.md  2026-07-22-vs-slint.md  2026-07-22-vs-winforms.md  2026-07-22-vs-wpf.md  2026-07-22-vs-wxwidgets.md  README.md
docs/KNOWLEDGE/cooking/: 2026-07-22-recipe-button-with-style.md
docs/KNOWLEDGE/polish/: 2026-07-22-button-disabled-state-color.md  2026-07-22-charts-split-recommendation.md  2026-07-22-combo-box-dropdown-item-style.md  2026-07-22-dpi-wm-setfont.md  2026-07-22-hoverstate-track-mouse-fallback.md  2026-07-22-listbox-row-hover-not-implemented.md  2026-07-22-memorydc-createbitmap-fallback.md  2026-07-22-nfui-dialog-extraction-deferred.md  2026-07-22-progressbar-bar-color-opt.md  2026-07-22-sample-component-audit.md  2026-07-22-splitter-drag-feedback.md  2026-07-22-statusbar-theme-color.md  2026-07-23-cp10-animation.md  2026-07-23-cp10-architecture-check.md  2026-07-23-cp10-high-contrast.md  2026-07-23-cp10-sample-docs.md  2026-07-23-cp11-sample-per-component-link.md  2026-07-23-cp12-dialog-tour-sample.md  2026-07-23-cp13-stale-doc-cleanup.md  2026-07-23-cp14-area-chart.md  2026-07-23-cp15-fix-visible-defects.md  2026-07-23-cp16-shadow-gradient.md  2026-07-23-cp17-micro-animation.md  2026-07-23-cp18-vector-icons.md  2026-07-23-cp19-chrome-consistency-focus-rings.md  2026-07-23-cp2-corner-abruptness.md  2026-07-23-cp20-listview-treeview-tab-chrome.md  2026-07-23-cp21-header-caption-tab-active.md  2026-07-23-cp22-sample-visual-fixes.md  2026-07-23-cp23-statusbar-chrome.md  2026-07-23-cp24-menu-progress-tree.md  2026-07-23-cp25-slider-chrome-treeview-blackbg.md  2026-07-23-cp26-header-semibold.md  2026-07-23-cp3-component-states.md  2026-07-23-cp4-charts-polish.md  2026-07-23-cp5-edit-combobox.md  2026-07-23-cp5-frame-types.md  (+14 more)
docs/LEARNINGS/: 2026-07-fontcache-dpi-audit.md  2026-07-paint-cycle-audit.md
docs/VISUAL_AUDIT/: AUDIT.md  INDEX.md
docs/source/: feasibility-analysis.md  requirements-discussion.md  system-architecture-baseline.md
docs/tutorials/: 2026-07-22-tutorial-01-hello-window.md
include/nfui/: Animation.hpp  Application.hpp  Charts.hpp  Clock.hpp  Command.hpp  Controls.hpp  Diagnostics.hpp  Dialog.hpp  Dpi.hpp  Easing.hpp  Font.hpp  Handle.hpp  HoverState.hpp  Icon.hpp  Layout.hpp  Menu.hpp  NativeFrameUI.hpp  Paint.hpp  Persistence.hpp  ResourceContext.hpp  Theme.hpp  VectorIcon.hpp  Window.hpp
resources/: NativeFrameUI.rc  NativeFrameUIResource.h
samples/NativeFrameUICharts/: NativeFrameUICharts.cpp  README.md
samples/NativeFrameUIComponentGallery/: CMakeLists.txt  NativeFrameUIComponentGallery.cpp  README.md
samples/NativeFrameUIControls/: NativeFrameUIControls.cpp  README.md
samples/NativeFrameUIControlsPlayground/: NativeFrameUIControlsPlayground.cpp
samples/NativeFrameUIDarkStudio/: NativeFrameUIDarkStudio.cpp  README.md
samples/NativeFrameUIDialogTour/: NativeFrameUIDialogTour.cpp  README.md
samples/NativeFrameUIIconGallery/: NativeFrameUIIconGallery.cpp
samples/NativeFrameUIMinimal/: CMakeLists.txt  NativeFrameUIMinimal.cpp  README.md
samples/NativeFrameUIResourceGallery/: NativeFrameUIResourceGallery.cpp  README.md
samples/NativeFrameUISettingsDemo/: NativeFrameUISettingsDemo.cpp  README.md
samples/NativeFrameUIShowcase/: NativeFrameUIShowcase.cpp  README.md  ShowcaseView.cpp  ShowcaseView.hpp
samples/NativeFrameUIThemeDemo/: CMakeLists.txt  NativeFrameUIThemeDemo.cpp  README.md
samples/NativeFrameUIWorkbench/: NativeFrameUIWorkbench.cpp  README.md
src/charts/: AreaChartView.cpp  BarChartView.cpp  ChartView.cpp  Charts.cpp  ChartsPaint.cpp  HBarChartView.cpp  LineChartView.cpp  SplineChartView.cpp
src/command/: Command.cpp
src/controls/: Button.cpp  CheckBox.cpp  ComboBox.cpp  Controls.cpp  Edit.cpp  IconView.cpp  ListBox.cpp  ListView.cpp  Panel.cpp  ProgressBar.cpp  RadioButton.cpp  Slider.cpp  Splitter.cpp  StaticText.cpp  StatusBar.cpp  TabControl.cpp  Tooltip.cpp  TreeView.cpp
src/core/: Application.cpp  Dialog.cpp  HoverState.cpp  Window.cpp
src/dpi/: Dpi.cpp
src/font/: Font.cpp
src/icon/: Icon.cpp
src/layout/: Layout.cpp
src/menu/: Menu.cpp
src/paint/: Paint.cpp  VectorIcon.cpp
src/persistence/: Persistence.cpp
src/resource/: ResourceContext.cpp
src/theme/: Theme.cpp
tests/: nativeframeui_smoke.cpp  verify_boundaries_tests.ps1
tools/: verify_architecture.ps1  verify_boundaries.ps1
tools/visual_audit/: CMakeLists.txt  NativeFrameUIVisualAudit.cpp  run_audit.ps1  screenshot.cpp
(+62 files in other folders)
